--- a/index.html
+++ b/index.html
@@ -1,40 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./script.js" defer></script>
+  <title>Rock Paper Scissors</title>
+</head>
+<body>
+  <div id="buttons">
+    <button>Paper</button>
+    <button>Scissor</button>
+    <button>Rock</button>
+  </div>
 
-<html>
-	<head></head>
-	<meta charset="UTF-8">
-	<title>Guess the Number</title>
-	<script src="script.js"></script>
-
-
-
-
-	<body>
-
-	
-
-
-	</body>
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <div id="result">
+    <p id="p1"></p>
+    <p id="p2"></p>
+  </div>
+</body>
 </html>
